--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
-      rel="stylesheet"
-    />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap"
       rel="stylesheet"
@@ -21,15 +18,97 @@
     <link
       rel="preload"
       as="image"
-      href="/image1.jpg"
-      type="image/webp"
+      href="/public/image1.jpg"
+      type="image/jpeg"
       fetchpriority="high"
     />
 
-    <title>Ezekiel's Portfolio Website</title>
+    <title>Ezekiel | Full Stack Web Developer (React, Node.js, MongoDB)</title>
+    <meta
+      name="title"
+      content="Ezekiel | Full Stack Web Developer (React, Node.js, MongoDB)"
+    />
+    <meta
+      name="description"
+      content="Portfolio of Ezekiel, a full stack web developer skilled in React, Node.js, and MongoDB. Explore my projects, resume, and contact details. Available for remote roles."
+    />
+    <meta
+      name="keywords"
+      content="Ezekiel, Full Stack Developer, React Developer, Node.js Developer, MongoDB, JavaScript, TypeScript, Remote Web Developer, Portfolio"
+    />
+    <meta name="author" content="Ezekiel" />
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://ezekieltabukewebsite.netlify.app/"
+    />
+    <meta property="og:title" content="Ezekiel | Full Stack Web Developer" />
+    <meta
+      property="og:description"
+      content="Full stack developer skilled in React, Node.js, and MongoDB. Check out my portfolio projects and contact me."
+    />
+    <meta
+      property="og:image"
+      content="https://ezekieltabukewebsite.netlify.app/preview.png"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:url"
+      content="https://ezekieltabukewebsite.netlify.app"
+    />
+    <meta name="twitter:title" content="Ezekiel | Full Stack Web Developer" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Ezekiel showcasing React, Node.js, and MongoDB projects. Available for remote roles."
+    />
+    <meta
+      name="twitter:image"
+      content="https://ezekieltabukewebsite.netlify.app/preview.png"
+    />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/full-stack.png" type="image/png" />
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Ezekiel",
+        "jobTitle": "Full Stack Web Developer",
+        "url": "https://ezekieltabukewebsite.netlify.app/",
+        "image": "https://ezekieltabukewebsite.netlify.app/preview.png",
+        "email": "mailto:tabukeezekiel9@gmail.com",
+        "sameAs": [
+          "https://github.com/Ezekiel-web-dev-17/",
+          "https://www.linkedin.com/in/tabuke-ezekiel-622792340",
+          "https://x.com/Ezekiel70993598?t=zGZMp67XH57krvqhsi9Qyg&s=09"
+        ],
+        "knowsAbout": [
+          "React",
+          "Node.js",
+          "MongoDB",
+          "JavaScript",
+          "TypeScript",
+          "Web Development"
+        ],
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Freelance / Remote"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "email": "tabukeezekiel9@gmail.com",
+          "contactType": "customer support"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" defer></script>
   </body>
 </html>
