Analysis by google

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link
       rel="preload"
       as="image"
-      href="/public/image1.jpg"
+      href="/image1.jpg"
       type="image/jpeg"
       fetchpriority="high"
     />
@@ -109,6 +109,20 @@
           "contactType": "customer support"
         }
       }
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-PVBWMV8Z9W"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-PVBWMV8Z9W");
     </script>
   </head>
   <body>
