Changed image size for only desktop and tablet devices

--- a/index.html
+++ b/index.html
@@ -27,6 +27,15 @@
       fetchpriority="high"
     />
 
+    <script
+      type="text/javascript"
+      data-cmp-ab="1"
+      src="https://cdn.consentmanager.net/delivery/autoblocking/7b83e787f2516.js"
+      data-cmp-host="c.delivery.consentmanager.net"
+      data-cmp-cdn="cdn.consentmanager.net"
+      data-cmp-codesrc="16"
+    ></script>
+
     <title>Ezekiel | Full Stack Web Developer (React, Node.js, MongoDB)</title>
     <meta
       name="title"
